# sleef

./: CMakeLists.txt  LICENSE  README.md
purec/: CMakeLists.txt  sleef.h
simd/: CMakeLists.txt  helpersse2.h  nonnumber.h  sleefavx.partial.h  sleefavx2.partial.h  sleefneon.partial.h  sleefsimddp.partial.h  sleefsimdsp.partial.h  sleefsse2.partial.h
tester/: CMakeLists.txt  iut.c  iut_simd.c  iutsimd.c
